raw/scss/_circle.scss
// Circle member page
.circle {
  .splash-wrapper {
    padding: 1em;
  }

  .splash {
    background-color: lighten($black, 25%);
    background-image: url('../bg/circle.jpg');
    background-position-x: 100%;

    @include media($tablet-carousel) {
      background-position-x: 0%;
    }
  }

  .main {
    @include media($mobile) {
      padding: 0 1em;
    }

    @media print {
      padding-top: 0;
    }
  }

  .main-right {
    p {
      margin: 0.3em 0;
    }
  }

  .tagline {
    margin: 1em 0 0.5em 0;
  }

  @page {
    margin: 1cm;
    size: A4;
  }

  .no_print {
    @media print {
      display: none;
    }
  }

  .print_full {
    @media print {
      @include span-columns(12);

      @include media($tablet) {
        @include span-columns(12);
      }

      @include media($mobile) {
        @include span-columns(12);
        padding: 0 1em;
      }
    }
  }
}

.circle-box {
  @include span-columns(4);

  @media (max-width: 855px) {
    margin-bottom: 2em;
    @include span-columns(6);
      @include shift(3);
  }

  @include media($mobile) {
    @include span-columns(12);
      @include shift(0);
  }
}

.circle-box-top {
  background-color: $white;
  padding: 1em 2.2em;
  text-align: center;

  h3 {
    border-bottom: 2px solid $yellow-tribune;
    color: $black;
    padding: 0.2em 0;
  }

  p {
    color: $black;
    font-weight: 700;
    margin: 0.5em 0;
  }
}

.circle-box-bottom {
  background-color: $white;
  color: $black;
  padding: 0 1em 1em 1em;
  text-align: left;

  .button {
    font-size: 1em;
    font-weight: 600;
    padding: 0.8em;
    width: 48%;

    .fa {
      font-size: 0.8em;
    }
  }
}

.circle-members-header {
  text-align: center;

  .circle-logo {
    max-width: 60%;

    @media print {
      max-width: 200px;
    }
  }
}

.circle-members {
  padding: 1em 0;

  .circle-list-wrapper {
    margin-bottom: 1em;
    text-align: center;

    @media print {
      margin: 0 1.8em 1em;
    }
  }

  .circle-title {
    text-align: center;
    text-transform: uppercase;
    letter-spacing: 3px;
    padding: .5em;
    font-size: 1.5em;

    @media print {
      font-size: 1em;
    }
  }

  .circle-list {
    font-size: 1em;
    line-height: 1.5em;

    @media print {
      font-size: .78em;
      white-space: nowrap;
    }
  }

  .yellow-star {
    color: $yellow-tribune;
    font-size: .8em;
  }
}

.thanks {
  @include background-sizing;
  background-color: lighten($black, 20%);
  background-image: url("../bg/footer-thanks.jpg");
  height: 350px;

  .inner-info {
    @include media($mobile) {
      margin: 0 1em;
    }

    &:hover {
      background-color: transparent;
      border: 3px solid $white;
    }

    hr {
      @include hide-for-mobile;
    }
  }
}

